@@ -176,6 +176,7 @@ $(document).ready(function(){
     <td class="tabnavtbl">
       <ul id="tabnav">
 	<li class="tabact"><a href="services_hast.php" title="<?=gettext("Reload page");?>"><span><?=gettext("Settings");?></span></a></li>
+	<li class="tabinact"><a href="services_hast_resource.php"><span><?=gettext("Resources");?></span></a></li>
 	<li class="tabinact"><a href="services_hast_info.php"><span><?=gettext("Information");?></span></a></li>
       </ul>
     </td>
